<resources>
    <string name="app_name">OCaml</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="extension_not_supported_title">Extension not supported</string>
    <string name="extension_not_supported_message">Only .ml and .mli OCaml files are supported</string>
    <string name="button_ok">OK</string>
    <string name="learn">Learn</string>
    <string name="code">Code</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="documentation">Documentation</string>
    <string name="console">Console</string>
    <string name="developer_text">Developed by Nathan Fallet</string>
    <string name="opensource">Open source</string>
    <string name="console_load">Loading OCaml console, please wait…</string>
    <string name="console_failed">Failed to load console</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_reset">Reset</string>
    <string name="donate_title">Donate</string>
    <string name="donate_header">Select an amount to donate:</string>
    <string name="donate_footer">This donation will help our organization to develop its projects, mainly Extopy, the social network we are working on, which will require some storage for its servers.</string>
    <string name="donate_thanks">Thanks for donating to our organization!</string>
    <string name="editor_settings">Editor settings</string>
    <string name="backgroundcolor">Background color</string>
    <string name="plaincolor">Plain text color</string>
    <string name="numbercolor">Numbers color</string>
    <string name="stringcolor">Strings color</string>
    <string name="identifiercolor">Identifiers color</string>
    <string name="keywordcolor">Keywords color</string>
    <string name="commentcolor">Comments color</string>
    <string name="opensource_androidlibraries">Android libraries</string>
    <string name="opensource_others">Others</string>
    <string name="opensource_repo_ocaml">The app itself</string>
    <string name="opensource_repo_js_of_ocaml">Compiler from OCaml to Javascript.</string>
    <string name="opensource_repo_digianalytics">Realtime web analytics with privacy and simplicity at its core.</string>
    <string name="opensource_repo_kodeeditor">A simple code editor with syntax highlighting and pinch to zoom</string>
</resources>