<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <PreferenceCategory
        app:title="@string/editor_settings">



    </PreferenceCategory>
    -->

    <PreferenceCategory
        app:title="@string/about">

        <Preference
            app:key="about_developer"
            app:title="@string/developer_text"/>

        <Preference
            app:title="@string/documentation">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://ocaml-learn-code.com/learn" />
        </Preference>

        <Preference
            app:fragment="me.nathanfallet.ocaml.activities.SettingsActivity$OpenSourceFragment"
            app:key="messages_header"
            app:title="@string/opensource" />

    </PreferenceCategory>

</PreferenceScreen>